[gd_scene load_steps=41 format=3 uid="uid://dvljdu2x2pktx"]

[ext_resource type="Script" uid="uid://tpi42qt85jfc" path="res://scenes/game_standard.gd" id="1_8ncto"]
[ext_resource type="Texture2D" uid="uid://boe8csxgvr3ss" path="res://assets/grasstransparent.png" id="2_ngjf4"]
[ext_resource type="PackedScene" uid="uid://bm3sq6ecmjjf2" path="res://actors/plant_seed.tscn" id="3_0ysxt"]
[ext_resource type="SpriteFrames" uid="uid://mmgmejqbpbmd" path="res://resources/dandelion_spriteframes.tres" id="4_162ut"]
[ext_resource type="PackedScene" uid="uid://dmov2xrv47nx4" path="res://actors/player.tscn" id="4_njln4"]
[ext_resource type="Script" uid="uid://bx7yfvsgakn36" path="res://scripts/growth_camera.gd" id="5_tukx6"]
[ext_resource type="Texture2D" uid="uid://cqf3xek2q6hls" path="res://assets/backgroundmirrored.png" id="6_3oa70"]
[ext_resource type="Texture2D" uid="uid://dbxe4jtph5ra1" path="res://assets/Stars Small_2.png" id="7_217rk"]
[ext_resource type="Texture2D" uid="uid://beudwut7ac0jk" path="res://assets/Stars Small_1.png" id="8_uj5c1"]
[ext_resource type="PackedScene" uid="uid://b7hr6u3tlnrdy" path="res://actors/trail_man.tscn" id="9_kjco0"]
[ext_resource type="PackedScene" uid="uid://dy21sqe4fqm1v" path="res://actors/WaterPickup.tscn" id="10_22vom"]
[ext_resource type="PackedScene" uid="uid://dytbi11d84kv0" path="res://scenes/ui.tscn" id="11_1c7ax"]
[ext_resource type="PackedScene" uid="uid://excc8c2neq53" path="res://actors/light_pickup.tscn" id="11_4rhej"]
[ext_resource type="PackedScene" uid="uid://dv76m0v6d8lpg" path="res://actors/Goal.tscn" id="12_ob230"]
[ext_resource type="Script" uid="uid://gmr81mo2i3to" path="res://scenes/win_scene.gd" id="13_o4jml"]
[ext_resource type="Script" uid="uid://8dm670bsgvgj" path="res://actors/audiosfx.gd" id="14_ao37f"]
[ext_resource type="AudioStream" uid="uid://nnvpfvoudmj2" path="res://assets/audio/goalsound.wav" id="15_x6rdk"]
[ext_resource type="AudioStream" uid="uid://b63tdwf43fyx8" path="res://assets/audio/gamewonsound.wav" id="16_2avov"]
[ext_resource type="AudioStream" uid="uid://dh2uqgpib4cdt" path="res://assets/audio/beforegamemusic.mp3" id="17_auggo"]
[ext_resource type="AudioStream" uid="uid://oc1v3c76vrl4" path="res://assets/audio/backgroundmusic.mp3" id="18_7kq07"]
[ext_resource type="Script" uid="uid://bjg43d03hg2y" path="res://scripts/input_detector.gd" id="19_wra7f"]
[ext_resource type="Script" uid="uid://dhtvq68dd676d" path="res://components/freeze.gd" id="20_2clli"]
[ext_resource type="AudioStream" uid="uid://bkc2vdrqnebaq" path="res://assets/audio/gameendmusic.mp3" id="20_7nlwe"]
[ext_resource type="PackedScene" uid="uid://co72v01qsy5wt" path="res://actors/bubble_accept.tscn" id="21_qx7eb"]
[ext_resource type="Theme" uid="uid://b2omskbqfbyl2" path="res://resources/bubbletheme.tres" id="22_8iteh"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_5qvnr"]
polygon = PackedVector2Array(2298, 1558, 2113, 1690, 1948, 1777, 2335, 1791, 2633, 1807, 2409, 1602)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_1wmrw"]
polygon = PackedVector2Array(2493, 1576, 2536, 1681, 2543, 1724, 2653, 1676, 2562, 1571)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_s636m"]
polygon = PackedVector2Array(2451, 1580, 2355, 1659, 2520, 1708, 2652, 1647, 2562, 1571)

[sub_resource type="Gradient" id="Gradient_sh4f2"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xfjxt"]
gradient = SubResource("Gradient_sh4f2")

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vg3c2"]
gradient = SubResource("Gradient_sh4f2")
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_moq6x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainAnimationPlayer/Dandelion:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(760, 1100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainAnimationPlayer/Dandelion:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pjsb1"]
resource_name = "fly_in_cutscene"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1000, -500), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainAnimationPlayer/Dandelion:position")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(760, 1100), Vector2(2420, 1720)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainAnimationPlayer/Dandelion:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(5, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 5, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ij5bm"]
_data = {
&"RESET": SubResource("Animation_moq6x"),
&"fly_in_cutscene": SubResource("Animation_pjsb1")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_e05q1"]

[sub_resource type="Animation" id="Animation_41nk5"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_swu43"]
resource_name = "credits"
length = 30.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 27.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2432, 1773), Vector2(3300, -1300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_p5ojj"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6y52f"]
_data = {
&"RESET": SubResource("Animation_41nk5"),
&"credits": SubResource("Animation_swu43"),
&"fade_in": SubResource("Animation_p5ojj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wyyh"]
size = Vector2(591, 255)

[node name="Level_1" type="Node2D"]
process_mode = 1
script = ExtResource("1_8ncto")
next_level = "res://scenes/level_3.tscn"

[node name="Ground" type="Sprite2D" parent="."]
z_index = -5
texture = ExtResource("2_ngjf4")
centered = false

[node name="LightOccluder2D" type="LightOccluder2D" parent="Ground"]
position = Vector2(-742, -22)
occluder = SubResource("OccluderPolygon2D_5qvnr")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Ground"]
position = Vector2(296, 3)
occluder = SubResource("OccluderPolygon2D_1wmrw")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="Ground"]
position = Vector2(147, 101)
occluder = SubResource("OccluderPolygon2D_s636m")

[node name="MainLights" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="MainLights"]
position = Vector2(3764.47, -189.597)
rotation = 2.45742
scale = Vector2(48.4431, 21.5057)
color = Color(0.94902, 0.886275, 0.0196078, 1)
energy = 0.3
shadow_enabled = true
shadow_filter = 1
texture = SubResource("GradientTexture2D_xfjxt")
offset = Vector2(32.36, 0)

[node name="PointLight2D8" type="PointLight2D" parent="MainLights"]
position = Vector2(507.314, 196.084)
rotation = -2.87979
scale = Vector2(42.4927, 15.9219)
color = Color(0.94902, 0.886275, 0.0196078, 1)
energy = 0.3
shadow_enabled = true
shadow_filter = 1
texture = SubResource("GradientTexture2D_vg3c2")
offset = Vector2(-32.07, 0)

[node name="StartPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(2432, 1773)

[node name="PlantSeed" parent="StartPosition" instance=ExtResource("3_0ysxt")]

[node name="MainAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ij5bm")
}
autoplay = "fly_in_cutscene"

[node name="Dandelion" type="AnimatedSprite2D" parent="MainAnimationPlayer"]
position = Vector2(760, 1100)
scale = Vector2(2, 2)
sprite_frames = ExtResource("4_162ut")
autoplay = "default"
frame = 7
frame_progress = 0.0888641

[node name="Player" parent="." instance=ExtResource("4_njln4")]
modulate = Color(1, 1, 1, 0)
position = Vector2(2432, 1773)

[node name="Camera2D" type="Camera2D" parent="Player"]
offset = Vector2(0, -150)
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("5_tukx6")
noise = SubResource("FastNoiseLite_e05q1")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -10

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -10
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(3000, 1591)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Background"]
modulate = Color(1, 1, 0.992157, 1)
texture = ExtResource("6_3oa70")
centered = false

[node name="DustBack" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -6
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(4096, 4096)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/DustBack"]
texture_repeat = 3
texture = ExtResource("7_217rk")
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false

[node name="Ground" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -5
texture = ExtResource("2_ngjf4")
centered = false

[node name="LightOccluder2D" type="LightOccluder2D" parent="ParallaxBackground/ParallaxLayer/Ground"]
occluder = SubResource("OccluderPolygon2D_5qvnr")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="ParallaxBackground/ParallaxLayer/Ground"]
occluder = SubResource("OccluderPolygon2D_1wmrw")

[node name="DustFront" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1
motion_scale = Vector2(0.8, 0.8)
motion_mirroring = Vector2(4096, 4096)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/DustFront"]
texture = ExtResource("8_uj5c1")
centered = false

[node name="TrailMan" parent="." node_paths=PackedStringArray("target") instance=ExtResource("9_kjco0")]
target = NodePath("../Player")

[node name="WaterPickups" type="Node2D" parent="."]
z_index = -2

[node name="Pickup7" parent="WaterPickups" instance=ExtResource("10_22vom")]
position = Vector2(2584, 414)

[node name="Pickup10" parent="WaterPickups" instance=ExtResource("10_22vom")]
position = Vector2(2933, -228)

[node name="Pickup2" parent="WaterPickups" instance=ExtResource("10_22vom")]
position = Vector2(2474, 776)

[node name="Pickup6" parent="WaterPickups" instance=ExtResource("10_22vom")]
position = Vector2(2663, 263)

[node name="LightPickups" type="Node2D" parent="."]
z_index = -2

[node name="LightPickup" parent="LightPickups" instance=ExtResource("11_4rhej")]
position = Vector2(3433, 456)

[node name="LightPickup2" parent="LightPickups" instance=ExtResource("11_4rhej")]
position = Vector2(2026, 439)

[node name="LightPickup3" parent="LightPickups" instance=ExtResource("11_4rhej")]
position = Vector2(2498, 587)

[node name="LightPickup4" parent="LightPickups" instance=ExtResource("11_4rhej")]
position = Vector2(2679, 365)

[node name="UI" parent="." instance=ExtResource("11_1c7ax")]

[node name="VBoxContainer" parent="UI/MarginContainer/HBoxContainer" index="2"]
visible = false

[node name="Goal0" parent="." instance=ExtResource("12_ob230")]
position = Vector2(2871, -525)
goal_num = 1

[node name="Goal3" parent="." instance=ExtResource("12_ob230")]
modulate = Color(0.94902, 0.886275, 0.0196078, 1)
position = Vector2(3361, -716)
goal_num = 3

[node name="WinScene" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("13_o4jml")

[node name="CenterContainer" type="CenterContainer" parent="WinScene"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -422.5
offset_top = -50.0
offset_right = 422.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="FinalPhraseLabel" type="RichTextLabel" parent="WinScene/CenterContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_colors/default_color = Color(0.282353, 0.54902, 0.0117647, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/bold_italics_font_size = 64
theme_override_font_sizes/italics_font_size = 64
theme_override_font_sizes/mono_font_size = 64
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 64
bbcode_enabled = true
text = "[wave amp=40.0 freq=2.0 connected=1][fade start=30 length=6]Safe travels on a new journey . . . [/fade][/wave]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="SceneModulate" type="CanvasModulate" parent="WinScene"]
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="WinScene/SceneModulate"]
libraries = {
&"": SubResource("AnimationLibrary_6y52f")
}

[node name="Camera2D" type="Camera2D" parent="WinScene"]
position_smoothing_enabled = true

[node name="Info" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameTitle" type="RichTextLabel" parent="Info"]
layout_mode = 0
offset_left = 1712.0
offset_top = 1294.0
offset_right = 3160.0
offset_bottom = 1598.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/italics_font_size = 50
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[wave amp=50.0 freq=5.0 connected=1][center][color=#488C03]
Sunny Level
[/color][/center][/wave]"
scroll_active = false

[node name="SproutLabel" type="RichTextLabel" parent="Info"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 2228.0
offset_top = 1600.0
offset_right = 2630.0
offset_bottom = 1767.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]Press ASDW or use [font=res://assets/fonts/promptfont.otf]⟵[/font] to
[rainbow]Sprout[/rainbow][/center]"
fit_content = true

[node name="AudioSfx" type="Node" parent="."]
script = ExtResource("14_ao37f")

[node name="GoalReachedAudio" type="AudioStreamPlayer" parent="AudioSfx"]
stream = ExtResource("15_x6rdk")
bus = &"Sfx"

[node name="GameWonAudio" type="AudioStreamPlayer" parent="AudioSfx"]
stream = ExtResource("16_2avov")
bus = &"Sfx"

[node name="WelcomeBackgroundMusic" type="AudioStreamPlayer" parent="AudioSfx"]
stream = ExtResource("17_auggo")
autoplay = true
bus = &"Music"

[node name="GameBackgroundMusic" type="AudioStreamPlayer" parent="AudioSfx"]
process_mode = 3
stream = ExtResource("18_7kq07")
bus = &"Music"

[node name="CreditsMusic" type="AudioStreamPlayer" parent="AudioSfx"]
stream = ExtResource("20_7nlwe")
bus = &"Music"

[node name="Settings" type="CanvasLayer" parent="."]

[node name="InputDetector" type="Node" parent="."]
script = ExtResource("19_wra7f")

[node name="Tutorial" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Area2D3" type="Area2D" parent="Tutorial"]
process_mode = 3
visible = false
position = Vector2(2291, -565)
collision_layer = 0
collision_mask = 2
script = ExtResource("20_2clli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/Area2D3"]
position = Vector2(294.5, 53.5)
shape = SubResource("RectangleShape2D_7wyyh")

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial/Area2D3"]
offset_top = -67.0
offset_right = 500.0
offset_bottom = 179.0
theme_override_constants/separation = 30

[node name="Accept" parent="Tutorial/Area2D3/VBoxContainer" instance=ExtResource("21_qx7eb")]
layout_mode = 2

[node name="Powerups" type="RichTextLabel" parent="Tutorial/Area2D3/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme = ExtResource("22_8iteh")
bbcode_enabled = true
text = "[center]Big stars of [color=Gold]light[/color]
will give you a [color=seagreen][wave]level-persistent[/wave][/color] upgrade!
[/center]"
fit_content = true

[node name="Area2D4" type="Area2D" parent="Tutorial"]
process_mode = 3
visible = false
position = Vector2(2627, 421)
collision_layer = 0
collision_mask = 2
script = ExtResource("20_2clli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/Area2D4"]
position = Vector2(248, 53.5)
shape = SubResource("RectangleShape2D_7wyyh")

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial/Area2D4"]
offset_top = -54.0
offset_right = 500.0
offset_bottom = 192.0
theme_override_constants/separation = 30

[node name="Accept" parent="Tutorial/Area2D4/VBoxContainer" instance=ExtResource("21_qx7eb")]
layout_mode = 2

[node name="WithoutLight" type="RichTextLabel" parent="Tutorial/Area2D4/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme = ExtResource("22_8iteh")
bbcode_enabled = true
text = "[center]The closer to the [color=Gold]light[/color] you get,
the faster you recharge.
But you'll burn if you get too close!
[/center]"
fit_content = true

[node name="Area2D2" type="Area2D" parent="Tutorial"]
process_mode = 3
visible = false
position = Vector2(2018, 533)
collision_layer = 0
collision_mask = 2
script = ExtResource("20_2clli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/Area2D2"]
position = Vector2(248, 53.5)
shape = SubResource("RectangleShape2D_7wyyh")

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial/Area2D2"]
offset_top = -54.0
offset_right = 500.0
offset_bottom = 192.0
theme_override_constants/separation = 30

[node name="Accept" parent="Tutorial/Area2D2/VBoxContainer" instance=ExtResource("21_qx7eb")]
layout_mode = 2

[node name="WithoutLight" type="RichTextLabel" parent="Tutorial/Area2D2/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme = ExtResource("22_8iteh")
bbcode_enabled = true
text = "[center]Without [color=Gold]light[/color],
you run out of energy.
Try to grab some   →
And see the light meter go up
[/center]"
fit_content = true

[node name="Area2D" type="Area2D" parent="Tutorial"]
process_mode = 3
visible = false
position = Vector2(1861, 949)
collision_layer = 0
collision_mask = 2
script = ExtResource("20_2clli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/Area2D"]
position = Vector2(252.5, 88)
shape = SubResource("RectangleShape2D_7wyyh")

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial/Area2D"]
offset_top = -32.0
offset_right = 500.0
offset_bottom = 214.0
theme_override_constants/separation = 30

[node name="Accept" parent="Tutorial/Area2D/VBoxContainer" instance=ExtResource("21_qx7eb")]
layout_mode = 2

[node name="PlantsNeedLight" type="RichTextLabel" parent="Tutorial/Area2D/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme = ExtResource("22_8iteh")
bbcode_enabled = true
text = "[center]Plants also need [color=Gold]light[/color] to grow! 
Plants need [color=Gold]light[/color] for photosynthesis, the process that converts light, oxygen and water into carbohydrates (energy)
[/center]"
fit_content = true

[connection signal="animation_finished" from="MainAnimationPlayer" to="." method="_on_main_animation_player_animation_finished"]
[connection signal="build_changed" from="Player" to="UI" method="_on_player_build_changed"]
[connection signal="death" from="Player" to="." method="_on_player_death"]
[connection signal="death" from="Player" to="Tutorial" method="_on_player_death"]
[connection signal="distance_changed" from="Goal0" to="UI" method="_on_distance_changed"]
[connection signal="goal_reached" from="Goal0" to="." method="_on_generic_goal_reached"]
[connection signal="goal_reached" from="Goal0" to="UI" method="_on_goal_reached"]
[connection signal="distance_changed" from="Goal3" to="UI" method="_on_distance_changed"]
[connection signal="goal_reached" from="Goal3" to="." method="_on_goal_3_goal_reached"]
[connection signal="goal_reached" from="Goal3" to="UI" method="_on_goal_reached"]
[connection signal="input_type_changed" from="InputDetector" to="Tutorial/Area2D3/VBoxContainer/Accept" method="update_input_type"]
[connection signal="input_type_changed" from="InputDetector" to="Tutorial/Area2D2/VBoxContainer/Accept" method="update_input_type"]
[connection signal="input_type_changed" from="InputDetector" to="Tutorial/Area2D/VBoxContainer/Accept" method="update_input_type"]
[connection signal="body_entered" from="Tutorial/Area2D3" to="Tutorial/Area2D3" method="_on_body_entered"]
[connection signal="body_entered" from="Tutorial/Area2D4" to="Tutorial/Area2D4" method="_on_body_entered"]
[connection signal="body_entered" from="Tutorial/Area2D2" to="Tutorial/Area2D2" method="_on_body_entered"]
[connection signal="body_entered" from="Tutorial/Area2D" to="Tutorial/Area2D" method="_on_body_entered"]

[editable path="UI"]
